Fixes line-height so that text lines do not overlap

--- a/src/app/game/game-intermediate-result/game-example-drawings/game-example-drawings.component.scss
+++ b/src/app/game/game-intermediate-result/game-example-drawings/game-example-drawings.component.scss
@@ -22,4 +22,5 @@
 
 .speech-bubble-text {
   font-size: 2rem;
+  line-height: 2rem;
 }
